--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,6 @@ header a:visited {
 }
 
 #ringer {
-    display:none;
     width:300px;
     height:300px;
     margin:25px;
@@ -53,6 +52,7 @@ header a:visited {
 #upcoming-header {
     margin:0;
     padding:0.5em;
+    font:bold 18pt sans-serif;
     background-color:#CFC;
     text-align:left;
     border-top:4px black solid;
