Cleaned up around the repo

--- a/views/doorbell.erb
+++ b/views/doorbell.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>ADI Doorbell</title>
 
   <meta name="description" content="">
 
@@ -38,7 +38,6 @@
             <%= event[:title] %>
             <time><%= print_time event[:begin] %></time>
           </li>
-        <!--<li>Upcoming event <time>Date</time></li>-->
         <% end %>
       </ul>
       <div>
@@ -49,11 +48,7 @@
     </div>
   </div>
 
-
   <script src="/js/jquery-1.7.2.min.js"></script>
-  <!-- <script src="/js/underscore-min.js"></script>
-  <script src="/js/backbone-min.js"></script> -->
-
   <script src="/js/script.js"></script>
 
 </body>
